<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lingvo Tutor</string>
    
    <string name="description_search">Search</string>
    <string name="description_home">Home</string>
    
    <string name="title_words">Words</string>
    <string name="title_words_detail">Word Detail</string>
    <string name="title_dictionary">Dictionary</string>
    <string name="title_exercise">Exercise</string>
    
    <string name="empty_dictionary">No dictionary is here. You could download some from menu.</string>
    <string name="empty_words">No words are here. You could download some from dictionary menu.</string>
    
    <string name="home_btn_dictionary">Dictionary</string>
    <string name="home_btn_exercise">Exercise</string>
    <string name="home_btn_settings">Settings</string>
    <string name="home_btn_words">Words</string>
    <string name="home_btn_exercise_2">Exercise 2</string>
    <string name="home_btn_about">About</string>
    
    <string name="btn_check">Check</string>
    <string name="btn_tip">Tip</string>
    
    <string name="menu_dictionary_open">Open From</string>
    <string name="menu_dictionary_file">File</string>
    <string name="menu_dictionary_url">Url</string>
    <string name="menu_dictionary_example">Example</string>
    <string name="menu_dictionary_delete">Delete Current</string>    
    
    <string name="dlg_btn_cancel">Cancel</string> 
    <string name="dlg_btn_ok">Ok</string>     
    <string name="dlg_lbl_file">Enter download filename here</string> 
    <string name="dlg_lbl_url">Enter download url here</string> 
    <string name="dlg_lbl_deleting">Deleting... Please wait.</string> 
    <string name="dlg_lbl_loading">Loading... Please wait.</string> 
    
    <string name="lbl_status_text_1">Current dictionary: </string>
    <string name="lbl_status_text_2">Words in dictionary: </string>
    <string name="lbl_status_text_1_empty">Current dictionary is empty</string>
    <string name="lbl_status_text_2_empty">No words in dictionary</string>
    
    <string name="lbl_search_results">Search results for</string>
    
    <string name="toast_not_implemented">Not implemented yet =)</string>
    <string name="toast_open_dictionary_first">Open dictionary first</string>
 
	<string name="search_label">Lingvo Tutor</string>
	<string name="search_hint">Search the dictionary</string>
	<!-- The description that will show up in the search settings for this source. -->
	<string name="settings_description">Definitions of words</string>

</resources>
