<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/home_root"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout
		style="@style/TitleBar">
		<TextView
			style="@style/TitleBarText" />
		<ImageView
			style="@style/TitleBarSeparator" />
		<ImageButton
			style="@style/TitleBarAction"
			android:contentDescription="@string/description_search"
			android:src="@drawable/ic_title_search"
			android:onClick="onSearchClick" />
	</LinearLayout>

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:padding="6dip">
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1">
			<Button
				android:id="@+id/home_btn_exercise"
				style="@style/HomeButton"
				android:onClick="onExerciseClick"
				android:text="@string/home_btn_exercise"
				android:drawableTop="@drawable/home_btn_exercise" />
				<Button
				android:id="@+id/home_btn_exercise_2"
				style="@style/HomeButton"
				android:onClick="onExercise_2Click"
				android:text="@string/home_btn_exercise_2"
				android:drawableTop="@drawable/home_btn_exercise_2" />
		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1">
			<Button
				android:id="@+id/home_btn_dictionary"
				style="@style/HomeButton"
				android:onClick="onDictionaryClick"
				android:text="@string/home_btn_dictionary"
				android:drawableTop="@drawable/home_btn_dictionary" />
			<Button
				android:id="@+id/home_btn_words"
				style="@style/HomeButton"
				android:onClick="onWordsClick"
				android:text="@string/home_btn_words"
				android:drawableTop="@drawable/home_btn_words" />
		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1">
			<Button
				android:id="@+id/home_btn_settings"
				style="@style/HomeButton"
				android:onClick="onSettingsClick"
				android:text="@string/home_btn_settings"
				android:drawableTop="@drawable/home_btn_settings" />
			<Button
				android:id="@+id/home_btn_about"
				style="@style/HomeButton"
				android:onClick="onAboutClick"
				android:text="@string/home_btn_about"
				android:drawableTop="@drawable/home_btn_about" />
		</LinearLayout>
	</LinearLayout>

	<LinearLayout
		style="@style/StatusBar">
		<TextView
			android:id="@+id/txt_status_line_1"
			style="@style/StatusBarText"/>
		<TextView
			android:id="@+id/txt_status_line_2"
			style="@style/StatusBarText" />
	</LinearLayout>

</LinearLayout>
